Closed Bug 352573 Opened 18 years ago Closed 18 years ago

nsLocalFile::CopyDirectoryTo uses oldPerms uninitialized

Categories

(Core :: XPCOM, defect)

x86
SunOS
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

()

Details

(Keywords: klocwork)

Attachments

(1 obsolete file)

 
Keywords: klocwork
it seems the logic is always create on directory, and for the directory we create we should use our existing permissions. so that's what i'm doing here.
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #238451 - Flags: review?(dougt)
Attachment #238451 - Flags: review?(dougt) → review+
Comment on attachment 238451 [details] [diff] [review]
share path with directory doesn't exist

mozilla/xpcom/io/nsLocalFileUnix.cpp 	1.133
Attachment #238451 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: