Bug 352573 nsLocalFile::CopyDirectoryTo uses oldPerms uninitialized r=dougt